--- a/Web_pages/Course_registration/course_registration.html
+++ b/Web_pages/Course_registration/course_registration.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Course Registration Form</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -54,7 +54,7 @@
     </form>
 </div>
 
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
